apps/prod/md-prec-kulinaryos/middleware-https.yml
# Traefik Middleware: HTTP -> HTTPS redirect
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: md-prec-kulinaryos
spec:
  redirectScheme:
    scheme: https
    permanent: true
